--- a/P1.ipynb
+++ b/P1.ipynb
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false
    },
@@ -1097,7 +1097,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 66%|██████▌   | 166/251 [00:27<00:17,  4.83it/s]"
+      "100%|██████████| 251/251 [00:46<00:00,  4.35it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/challenge.mp4 \n",
+      "\n",
+      "CPU times: user 13.9 s, sys: 2.04 s, total: 16 s\n",
+      "Wall time: 52.3 s\n"
      ]
     }
    ],
